Feature: backend for actions manipulation; minor changes

--- a/pm-app/public/index.html
+++ b/pm-app/public/index.html
@@ -28,6 +28,7 @@
       <script src="%PUBLIC_URL%/libs/lodash.js"></script>
       <script src="%PUBLIC_URL%/libs/backbone.js"></script>
       <script src="%PUBLIC_URL%/libs/joint.js"></script>
+      <script src="%PUBLIC_URL%/libs/saveSvgAsPng.js"></script>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
